# OpenXL

./: .gitignore  CMakeLists.txt  README.md
config/: VersionInfo.rc.in
resources/: Icon.icns
source/: XLWindowHeader.h  main.cpp
source/Message/: XLMessageCore.cpp  XLMessageCore.h  XLMessageDefine.h  XLMessageDialog.cpp  XLMessageDialog.h  XLMessageFrame.cpp  XLMessageFrame.h  XLMessageObserver.cpp  XLMessageObserver.h  XLMessageThread.cpp  XLMessageThread.h  XLMessageWidget.cpp  XLMessageWidget.h
source/Task/: XLTaskConfigure.cpp  XLTaskConfigure.h  XLTaskEngine.cpp  XLTaskEngine.h  XLTaskHandle.cpp  XLTaskHandle.h  XLTaskManager.cpp  XLTaskManager.h  XLTaskShared.cpp  XLTaskShared.h  XLTaskStream.cpp  XLTaskStream.h
source/Window/: XLWindowMain.cpp  XLWindowMain.h  XLWindowMain.ui
source/Window/Delete/: XLWindowDelete.cpp  XLWindowDelete.h  XLWindowDelete.ui
source/Window/Progress/: XLWindowProgress.cpp  XLWindowProgress.h  XLWindowProgress.ui  XLWindowProgressItem.cpp  XLWindowProgressItem.h  XLWindowProgressItem.ui
source/Window/Success/: XLWindowSuccess.cpp  XLWindowSuccess.h  XLWindowSuccess.ui
